Closed Bug 727818 Opened 14 years ago Closed 14 years ago

Same new groups list every time, new groups not saved unless after full refreshing

Categories

(Thunderbird :: General, defect)

52 Branch
x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Thunderbird 13.0

People

(Reporter: luweitest, Assigned: jcranmer)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 5.1; rv:10.0.1) Gecko/20100101 Firefox/10.0.1 Build ID: 20120208060813 Steps to reproduce: click the "New groups" in TB's subscribe window. Actual results: TB begin reloading the full group list. I checked the server log and find TB just issue "List" command to news server when click the "New groups" tab. Expected results: TB should check new groups only and issue "newgroups" command, IIRC.
Version: unspecified → 10
Attached patch FixSplinter Review
Huh. Easy enough to fix, though.
Assignee: nobody → Pidgeot18
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #604708 - Flags: review?(dbienvenu)
Attachment #604708 - Flags: review?(dbienvenu) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 13.0
Thank you. Hope it be implemented soon.
I'd like to reopen this bug but seems not privileged to. The cause is I just happened to find that the "new groups" TB shows are always the same. After some tests I see that TB did not add the new groups that it retrieved to the local list, but send NEWGROUPS command with the same timestamp again and again, until I did a full refresh of all groups. As I may stuck in WindowsXP for quite some time, hope it could be fixed in ESR. Thanks.
Summary: reloading full group list every time → Same new groups list every time, new groups not saved unless after full refreshing
Version: 10 Branch → 52 Branch
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: