Bug 727818 - 'New Groups' subscribe uses LIST instead of NEWGROUPS. r=bienvenu